# django-stripe-api

./: .env  README.md  db.sqlite3  pyproject.toml
payments/: models.py  views.py
payments/migrations/: 0001_initial.py
stripe_payments/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
