[tool.poetry]
name = "python developer rishat"
version = "0.1.0"
description = ""
authors = ["Odilbek99 <umaralievodili@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
